--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sample
+name: project
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -76,9 +76,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: OoohBaby
-       fonts:
-         - asset: assets/fonts/OoohBaby-Regular.ttf
+    - family: OoohBaby
+      fonts:
+        - asset: assets/fonts/OoohBaby-Regular.ttf
 
   #   - family: Trajan Pro
   #     fonts:
