--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+#  pdf_flutter: ^1.1.4
+#  flutter_pdfview: ^1.3.1
+#  flutter_pdfview: ^1.0.0+10
+#  path_provider: ^1.6.5
+#  http: ^0.12.0+4
   flutter_rating_bar: ^4.0.0
   flutter:
     sdk: flutter
@@ -37,10 +42,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+#  pdf: ^3.10.1
+  syncfusion_flutter_pdfviewer: ^20.1.48-beta.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+#  flutter_pdfview: ^1.3.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -63,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/pdf/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
